# bluecollar-bench

./: .gitignore  CITATION.cff  CONTRIBUTING.md  EVAL_v2.4.md  GAP_ANALYSIS_v2.md  Makefile  README.md  dataset.toml  harbor-codex-local.yaml  index.html  pyproject.toml  taxonomy.html
.github/workflows/: validate.yml
benchmark/: coverage_report.md  leakage_report.md  restore_report.md  taxonomy.json
benchmark/items/: audio_items_v2.json  control_items_v2.json  cpm_items_v2.json  id_map.json  interpretation_map.json  items.json  media_items_v2.json  original_scenarios.json  seed_items.json  text_rebalance_items_v2.json
benchmark/runs/: codex_full_suite_2026-07-04.json  codex_full_suite_2026-07-04.md  index.json  latest.json  model_results_summary_20260706.md  naturalization_comparison_20260706.md
configs/harbor/: apparmor-unconfined.compose.yaml  gpt55.job.json  sonnet5.job.json
docs/: eval-structure-dag.mmd  eval-structure-wiki.md  running-benchmarks.md
docs/source/: README.md  blue-collar-benchmark-taxonomy-v0.1.md  electrical-element-tree-v0.1.md  electrical-expansion-v0.2-task-catalog.json  (+5 more)
scripts/: build_item_catalog.py  build_run_synthesis_wiki.py  build_static_viewer_data.py  build_taxonomy_page.py  collect_run_results.py  compare_runs.py  gen_audio_items.py  gen_cpm_items.py  gen_electrical_expansion_specs.py  gen_media_items.py  gen_text_rebalance_items.py  generate_tasks.py  generate_tasks_v2.py  leakage_audit.py  naturalize_items.py  plot_run_results.py  restore_scenarios.py  run_gemini.py  run_harbor.sh  run_openrouter.py  validate_tasks.py
(+16624 files in other folders)
